--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Weather Dashboard</title>
+    <title>Weather Widget</title>
 </head>
 <body>
     <div class="jumbotron jumbotron-fluid bg">
@@ -27,7 +27,7 @@
             <h3 id ="currentTemp"></h3>
             <h3 id ="currentHumidity"></h3>
             <h3 id ="ws"></h3>
-            <h3 id ="currentHumidity"></h3>
+            <h3 id ="uvi"></h3>
           </div>
         </div>
         <div id ="forecast" class="d-flex justify-content-between" style="visibility: hidden">
